--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
     "routes": [
       {
         "src": "/(.*)",
-        "dest": "src/index.js"
+        "dest": "node src/index.js"
       }
     ]
   }
